# chioko_ai

./: .gitignore  README.md  SPEC.md  package-lock.json  start.sh
ellen_rust_backend/: .env.example  Cargo.toml  config.yaml  start.bat
ellen_rust_backend/src/: lib.rs  llm_client.rs  main.rs  parser.rs  ws_server.rs
ellen_rust_backend/test_page/: index.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Live2DCanvas.tsx
frontend/src/hooks/: useEllenSkill.ts
frontend/src/services/: AudioLipSync.ts  ExpressionController.ts  WebSocketClient.ts
frontend/src/types/: index.ts
src/: config.rs  logger.rs  persona.rs  state.rs  tts_bridge.rs
