[package]
name = "ellen_rust_backend"
version = "1.0.0"
edition = "2021"
authors = ["Ellen AI Team"]
description = "Ellen AI Rust Backend - WebSocket + LLM + TTS"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eventsource-stream = "0.2"
sha2 = "0.10"
base64 = "0.22"
regex = "1.10"
